fixed portfolio background on mobile

--- a/style.css
+++ b/style.css
@@ -395,7 +395,7 @@ h5 {
   }
 
   .portfolio {
-    margin: 0;
+    margin: 100px;
     padding: 20px;
   }
 
@@ -405,8 +405,8 @@ h5 {
   }
 
   .portfolioBox {
-    background-size: 200px 240px;
-    background-position: 50% -15px;
+    background-size: 280px 350px;
+    background-position: 50% 7px;
   }
 
   .aboutMe {
